ajax post working handshake with server

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,6 +9,11 @@
     <title>PG Intro</title>
 </head>
 <body>
-    
+    <input type="number" id="rankIn" placeholder="Rank">
+    <input type="text" id="artistIn" placeholder="Artist">
+    <input type="text" id="trackIn" placeholder="Track">
+    <input type="date" id="publishedIn" placeholder="Published">
+    <button id="addSongButton">Add Song</button>
+<ul class="output"></ul>
 </body>
 </html>
