delete function working!!!

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,6 +14,6 @@
     <input type="text" id="trackIn" placeholder="Track">
     <input type="date" id="publishedIn" placeholder="Published">
     <button id="addSongButton">Add Song</button>
-<ul class="output"></ul>
+<ul id="output"></ul>
 </body>
 </html>
